syntax = "proto3";
package pbLogin;

message LoginRequest {
  string loginName = 1;
}

message LoginResponse {
  string loginCode = 1;
  string loginMsg = 2;
}

message LogoutRequest {
  string logoutName = 1;
}

message LogoutResponse {
  string logoutCode = 1;
  string logoutMsg = 2;
}

service LoginRpc {
  rpc Login(LoginRequest) returns (LoginResponse){}
  rpc Logout(LogoutRequest) returns (LogoutResponse){}
}